Add TestFX with sample test
Signed-off-by: Jakub Šmrha <kuba.smrha@gmail.com>