@@ -62,7 +62,9 @@ dependencies {
 
     testImplementation 'net.synedra:validatorfx:0.4.0'
     testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
-    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+    testImplementation 'org.testfx:testfx-spock:4.0.16-alpha'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+    testImplementation 'org.jfxtras:openjfx-monocle:1.8.0_20'
 }
 
 group = 'cz.zcu.jsmahy'
@@ -86,4 +88,11 @@ tasks.withType(JavaCompile) {
 
 test {
     useJUnitPlatform()
+    systemProperties['testfx.robot'] = 'glass'
+//    systemProperties['testfx.headless'] = 'true'
+    systemProperties['prism.order'] = 'sw'
+    systemProperties['prism.text'] = 't2k'
+    jvmArgs = ["--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED",
+               "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+               "--add-exports", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",]
 }
